# ponycraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ponycraft/: CMakeLists.txt
ponycraft/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_dir.cpp
